# zkpass-cardano

./: .gitignore  CHANGELOG.md  README.md  cabal.project  cabal.project.local  zkpass-cardano.cabal
.github/workflows/: main-pull.yml
app/: Main.hs
app/ZkPass/: Api.hs  Utils.hs
app/ZkPass/Api/: Burn.hs  Context.hs  Mint.hs  SaveScriptsRef.hs  Setup.hs  Transfer.hs  Tx.hs
backends/: README.md
backends/zkPassToken-init-transaction/: Main.hs
backends/zkPassToken-minting-transaction/: Main.hs
backends/zkPassToken-transfer-transaction/: Main.hs
src/: MyLib.hs
src/ZkPass/Cardano/Example/: IdentityCircuit.hs  ZkPassResult.hs
src/ZkPass/Cardano/UPLC/: ZkPassToken.hs
